--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,8 @@
   "theme_color": "#0ea5e9",
   "icons": [
     {
-      "src": "capa-app.jpg",
+      "src": "capa-app.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ]
-}
+]
